# booklist-fastapi

./: README.md  pyproject.toml
app/: main.py
app/api/v1/endpoints/: book.py
app/database/: mock.py
app/model/: book.py
app/service/: csv.py
booklist/: main.py
booklist/api/v1/endpoints/: book.py
booklist/database/: mock.py
tests/unit/api/endpoints/: book_endpoint_test.py
