[tool.poetry]
name = "booklist"
version = "0.1.0"
description = ""
authors = ["ademolaarigbabuwo-8451 <ademola.arigbabuwo@8451.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
