[tool.poetry]
name = "booklist"
version = "0.1.0"
description = ""
authors = ["ademolaari <ademola.ari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
prometheus-client = "^0.19.0"
fastapi-versioning = "^0.10.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
